[package]
name = "resource_request"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = {version = "0.12.15", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
google-apis-common = "7.0.0"
google-sheets4 = "6.0.0+20240621"
yup-Oath2 = "0.15"

